--- a/home_style.css
+++ b/home_style.css
@@ -32,3 +32,23 @@
     border: 1px solid #a69042;
     
 }
+#dateTime
+{
+    background-color: white;  color: black;
+    border-radius: 5px;
+    border: 1px solid #e7e7e7;
+    width: 99%;
+    
+}
+#btnSubmit, #btnNext  
+{
+    margin-left: 44%;
+}
+
+#form1,  #form2
+{
+    
+    margin-left: 34%;
+}
+
+
