--- a/home_style.css
+++ b/home_style.css
@@ -43,6 +43,9 @@
 #btnSubmit, #btnNext  
 {
     margin-left: 44%;
+    color: black;
+    border-radius: 4px;
+    border: 2px solid #e7e7e7;
 }
 
 #form1,  #form2
@@ -50,5 +53,19 @@
     
     margin-left: 34%;
 }
-
+#date, #time
+{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-image: none;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
 
